# jotform-api-haskell

./: .gitignore  CHANGELOG.md  README.md  flake.nix  fourmolu.yaml  jotform-api-haskell.cabal
src/Network/: JotForm.hs
src/Network/JotForm/: Api.hs  Base.hs  Core.hs  Extra.hs  Raw.hs  Types.hs  Utils.hs
src/Network/JotForm/Api/: Folder.hs  Form.hs  Report.hs  Submission.hs  System.hs  User.hs
src/Network/JotForm/Raw/: Folder.hs  Form.hs  Report.hs  Submission.hs  System.hs  User.hs
test/: Examples.hs  Main.hs
