cabal-version: 3.0
name: jotform-api-haskell
version: 0.1.0.0
synopsis: Haskell bindings to the JotForm API
license: BSD-3-Clause
license-file: LICENSE
author: Lawrence Bell
category: Web
build-type: Simple

-- description:

extra-doc-files:
      CHANGELOG.md
    -- , README.md

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules: Network.JotForm
    build-depends:
          base ^>=4.16.4.0
        , http-client
    hs-source-dirs: src
    default-language: Haskell2010

test-suite jotform-api-haskell-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base
    , jotform-api-haskell
