cabal-version: 3.0
name: jotform-api-haskell
version: 0.1.0.0
synopsis: Haskell bindings to the JotForm API
license: BSD-3-Clause
license-file: LICENSE
author: Lawrence Bell
category: Web
build-type: Simple

-- description:

extra-doc-files:
      CHANGELOG.md
    , README.md

common warnings
    ghc-options: -Wall

common language-options
    default-extensions:
          ImportQualifiedPost
        , LambdaCase

library
    import: warnings, language-options
    exposed-modules: Network.JotForm.Core
    build-depends:
          base ^>=4.16.4.0
        , bytestring ^>=0.11.4.0
        , text ^>=1.2.5.0
        , http-client ^>=0.7.13.1
        , http-client-tls ^>=0.3.6.1
        , http-types ^>=0.12.3
        , case-insensitive ^>=1.2.1.0
    hs-source-dirs: src
    default-language: Haskell2010

test-suite jotform-api-haskell-test
    import: warnings, language-options
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
          base
        , jotform-api-haskell
